--- a/Week 3/Day 5/Exercice/DrumSetProjectRecreation/DrumSetProjectRecreation.html
+++ b/Week 3/Day 5/Exercice/DrumSetProjectRecreation/DrumSetProjectRecreation.html
@@ -18,9 +18,10 @@
   
   .drumset {
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: row;
+      flex-wrap: nowrap;
       justify-content: center;
-      gap: 20px;
+      gap: 10px;
       max-width: 800px;
   }
   
