--- a/Week 4/Day 5/Project/robo-friends/index.html
+++ b/Week 4/Day 5/Project/robo-friends/index.html
@@ -26,15 +26,15 @@
       background-position: center;
       background-repeat: no-repeat;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      backdrop-filter: blur(2px);
+      backdrop-filter: blur(1.5px);
     }
     .robot-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     }
     .robot-card-content {
-  /* background: rgba(255, 255, 255, 0.9);*/
-      backdrop-filter: blur(10px);
+  /* background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);*/
       border-radius: 0.5rem;
     }
 
